--- a/NewmanMobileApp/NewmanMobileApp/Views/QuizPage.xaml
+++ b/NewmanMobileApp/NewmanMobileApp/Views/QuizPage.xaml
@@ -6,10 +6,33 @@
              mc:Ignorable="d"
              x:Class="NewmanMobileApp.Views.QuizPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid Padding="25" RowSpacing="20">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="65" />
+                <RowDefinition Height="65" />
+                <RowDefinition Height="65" />
+
+
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+
+            </Grid.ColumnDefinitions>
+
+            <Label  Grid.Row="0" Grid.Column="0" Text="Welcome to the Quiz! Let's get started!"
+                    VerticalOptions="Center" 
+                    HorizontalOptions="Center" />
+            <Button  Grid.Row="1" Grid.Column="0" x:Name="QuizStartButton" Clicked="QuizStartButton_Clicked" Text="Start Quiz" CornerRadius="15"  Scale="1.0"
+                     BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="200" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
+
+            <Button  Grid.Row="2" Grid.Column="0" x:Name="SetNumberofQuestionsButton" Clicked="SetNumberofQuestionsButton_Clicked" Text="Set Number of Questions" CornerRadius="15"  Scale="1.0"
+                     BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="200" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
+
+            <Button  Grid.Row="3" Grid.Column="0" x:Name="ExitQuizButton" Clicked="ExitQuizButton_Clicked" Text="Exit Quiz" CornerRadius="15"  Scale="1.0"
+                     BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="200" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
