--- a/NewmanMobileApp/NewmanMobileApp/Views/QuizPage.xaml
+++ b/NewmanMobileApp/NewmanMobileApp/Views/QuizPage.xaml
@@ -6,33 +6,59 @@
              mc:Ignorable="d"
              x:Class="NewmanMobileApp.Views.QuizPage">
     <ContentPage.Content>
-        <Grid Padding="25" RowSpacing="20">
-
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="65" />
-                <RowDefinition Height="65" />
-                <RowDefinition Height="65" />
+        <StackLayout Padding="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
 
 
-            </Grid.RowDefinitions>
+            <ActivityIndicator x:Name="indicator" IsRunning="False" IsEnabled="False" IsVisible="False" Color="Orange" BackgroundColor="Transparent">
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <ActivityIndicator.Scale>
+                    <OnPlatform x:TypeArguments="x:Double" iOS="2.0" Android="2.0" />
+                </ActivityIndicator.Scale>
 
-            </Grid.ColumnDefinitions>
+            </ActivityIndicator>
 
-            <Label  Grid.Row="0" Grid.Column="0" Text="Welcome to the Quiz! Let's get started!"
+
+
+
+            <Grid Padding="25" RowSpacing="20">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="65" />
+                    <RowDefinition Height="65" />
+                    <RowDefinition Height="65" />
+
+
+                </Grid.RowDefinitions>
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+
+                </Grid.ColumnDefinitions>
+
+                <Label  Grid.Row="0" Grid.Column="0" Text="Welcome to the Quiz! Let's get started!"
                     VerticalOptions="Center" 
                     HorizontalOptions="Center" />
-            <Button  Grid.Row="1" Grid.Column="0" x:Name="QuizStartButton" Clicked="QuizStartButton_Clicked" Text="Start Quiz" CornerRadius="15"  Scale="1.0"
+
+                <Button  Grid.Row="1" Grid.Column="0" x:Name="QuizStartButton" Clicked="QuizStartButton_Clicked" Text="Start Quiz" CornerRadius="15"  Scale="1.0"
                      BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="200" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
 
-            <Button  Grid.Row="2" Grid.Column="0" x:Name="SetNumberofQuestionsButton" Clicked="SetNumberofQuestionsButton_Clicked" Text="Set Number of Questions" CornerRadius="15"  Scale="1.0"
+                <Button  Grid.Row="2" Grid.Column="0" x:Name="SetNumberofQuestionsButton" Clicked="SetNumberofQuestionsButton_Clicked" Text="Set Number of Questions" CornerRadius="15"  Scale="1.0"
                      BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="200" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
 
-            <Button  Grid.Row="3" Grid.Column="0" x:Name="ExitQuizButton" Clicked="ExitQuizButton_Clicked" Text="Exit Quiz" CornerRadius="15"  Scale="1.0"
+                <Button  Grid.Row="3" Grid.Column="0" x:Name="ExitQuizButton" Clicked="ExitQuizButton_Clicked" Text="Exit Quiz" CornerRadius="15"  Scale="1.0"
                      BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="200" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
-        </Grid>
+            </Grid>
+
+
+            <StackLayout HorizontalOptions="Fill" VerticalOptions="EndAndExpand">
+
+                
+            </StackLayout>
+
+        </StackLayout>
+
     </ContentPage.Content>
+
+
 </ContentPage>
