questons and answers populated, ui improvements

--- a/NewmanMobileApp/NewmanMobileApp/Views/QuizStartedPage.xaml
+++ b/NewmanMobileApp/NewmanMobileApp/Views/QuizStartedPage.xaml
@@ -3,27 +3,47 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:input="clr-namespace:Plugin.InputKit.Shared.Controls;assembly=Plugin.InputKit"
              mc:Ignorable="d"
              x:Class="NewmanMobileApp.Views.QuizStartedPage">
     <ContentPage.Content>
-        <Grid Padding="25" RowSpacing="20">
+        <StackLayout Padding="0" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition Height="65" />
-                <RowDefinition Height="65" />
-                <RowDefinition Height="65" />
+            <Grid x:Name="RadioGrid" Padding="25" RowSpacing="20">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="50" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="65" />
+                    <RowDefinition Height="65" />
 
 
-            </Grid.RowDefinitions>
+                </Grid.RowDefinitions>
 
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
 
-            </Grid.ColumnDefinitions>
+                </Grid.ColumnDefinitions>
 
-            <Label x:Name="QuestionsLabel" Grid.Row="0" Grid.Column="0" VerticalOptions="Center"  HorizontalOptions="Center" TextColor="Black" FontSize="20" />
+                <Label x:Name="QuestionsLabel" Grid.Row="0" Grid.Column="0" VerticalOptions="Center"  HorizontalOptions="Center" TextColor="Black" FontSize="20" />
+
+                <input:RadioButtonGroupView x:Name="AnswerButtonsGroup" Grid.Row="1" Grid.Column="0">
+
+                </input:RadioButtonGroupView>
+
+
+                <Button  Grid.Row="2" Grid.Column="0" x:Name="NextQuestionButton" Clicked="NextQuestionButton_OnClicked" Text="Next Question" CornerRadius="15"  Scale="1.0"
+                     BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="150" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="EndAndExpand" />
+
+                <Button  Grid.Row="2" Grid.Column="0" x:Name="ExitQuizButton" Clicked="ExitQuizButton_OnClicked" Text="Exit Quiz" CornerRadius="15"  Scale="1.0"
+                     BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="150" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="StartAndExpand" />
+
 
             </Grid>
+
+        </StackLayout>
+
+
+
     </ContentPage.Content>
 </ContentPage>
