--- a/NewmanMobileApp/NewmanMobileApp/Views/QuizPage.xaml
+++ b/NewmanMobileApp/NewmanMobileApp/Views/QuizPage.xaml
@@ -43,12 +43,17 @@
                 <Button  Grid.Row="1" Grid.Column="0" x:Name="QuizStartButton" Clicked="QuizStartButton_Clicked" Text="Start Quiz" CornerRadius="15"  Scale="1.0"
                      BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="200" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
 
+                <Button  Grid.Row="2" Grid.Column="0" x:Name="SetNumberofQuestionsButton" Clicked="SetNumberofQuestionsButton_Clicked" Text="Set Number of Questions" CornerRadius="15"  Scale="1.0"
+                     BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="200" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
+
+                <Button  Grid.Row="3" Grid.Column="0" x:Name="ExitQuizButton" Clicked="ExitQuizButton_Clicked" Text="Exit Quiz" CornerRadius="15"  Scale="1.0"
+                     BorderColor="#BDC100" BackgroundColor="#06145F" TextColor="#BDC100" WidthRequest="200" HeightRequest="50" FontSize="14" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" />
             </Grid>
 
 
             <StackLayout HorizontalOptions="Fill" VerticalOptions="EndAndExpand">
 
-                
+
             </StackLayout>
 
         </StackLayout>
