--- a/NewmanMobileApp/NewmanMobileApp/Views/AboutPage.xaml
+++ b/NewmanMobileApp/NewmanMobileApp/Views/AboutPage.xaml
@@ -7,11 +7,11 @@
              x:Class="NewmanMobileApp.Views.AboutPage"
              xmlns:vm="clr-namespace:NewmanMobileApp.ViewModels"
              Title="{Binding Title}">
-    
+
     <ContentPage.BindingContext>
         <vm:AboutViewModel />
     </ContentPage.BindingContext>
-    
+
     <ContentPage.Resources>
         <ResourceDictionary>
             <Color x:Key="Primary">#2196F3</Color>
@@ -38,25 +38,26 @@
                     <Label.FormattedText>
                         <FormattedString>
                             <FormattedString.Spans>
-                                <Span Text="AppName" FontAttributes="Bold" FontSize="22" />
+                                <Span Text="Newman Quiz (CSS 533 Assignment 4" FontAttributes="Bold" FontSize="22" />
                                 <Span Text=" " />
-                                <Span Text="1.0" ForegroundColor="{StaticResource LightTextColor}" />
+                                <Span Text="" ForegroundColor="{StaticResource LightTextColor}" />
                             </FormattedString.Spans>
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Label>
-                    <Label.FormattedText>
-                        <FormattedString>
-                            <FormattedString.Spans>
-                                <Span Text="This app is written in C# and native APIs using the" />
-                                <Span Text=" " />
-                                <Span Text="Xamarin Platform" FontAttributes="Bold" />
-                                <Span Text="." />
-                            </FormattedString.Spans>
-                        </FormattedString>
-                    </Label.FormattedText>
-                </Label>
+
+
+
+                <Label Text="Student Name: David Newman" />
+                <Label Text="West Virginia University" />
+                <Label Text="Instructor: James (Jim) Mooney" />
+                <Label Text="Class: CSS 533" />
+                <Label Text="This app is written in C# and native APIs using the" />
+                <Label Text=" " />
+                <Label Text="Xamarin Platform" FontAttributes="Bold" />
+                <Label Text="." />
+
+
                 <Label>
                     <Label.FormattedText>
                         <FormattedString>
@@ -70,12 +71,9 @@
                         </FormattedString>
                     </Label.FormattedText>
                 </Label>
-                <Button Margin="0,10,0,0" Text="Learn more"
-                        Command="{Binding OpenWebCommand}"
-                        BackgroundColor="{StaticResource Primary}"
-                        TextColor="White" />
+
             </StackLayout>
         </ScrollView>
     </Grid>
-    
+
 </ContentPage>
